# tower-defense-bevy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  settings.json
.claude/: settings.local.json
docs/: CENTRALIZED_INPUT_SYSTEM.md  F_KEY_SYSTEM_REFACTORING_SUMMARY.md
examples/: path_demo.rs  validate_wave_progression.rs
src/: lib.rs  main.rs
src/components/: enemy.rs  health.rs  mod.rs  position.rs  projectile.rs  tower.rs
src/game/: constants.rs  mod.rs
src/resources/: economy.rs  game_state.rs  mod.rs  path_generation.rs  score.rs  wave_manager.rs
src/systems/: combat_system.rs  debug_toggle.rs  debug_ui.rs  debug_ui.rs.disabled  debug_visualization.rs  enemy_system.rs  input_system.rs  mod.rs  obstacle_rendering.rs  pause_system.rs  settings_menu.rs  tower_rendering.rs  tower_ui.rs  tower_ui.rs.disabled  ui_system.rs  unified_grid.rs
src/systems/debug_ui/: cheat_interactions.rs  cheat_menu.rs  cheat_multipliers.rs  components.rs  (+5 more)
src/utils/: mod.rs
tests/: catmull_rom_path_quality_tests.rs  catmull_rom_performance_tests.rs  catmull_rom_strategic_balance_tests.rs  coordinate_system_verification.rs  dense_grid_performance.rs  dense_grid_verification.rs  economy_tests.rs  enemy_movement_tests.rs  enemy_tests.rs  fkey_security_validation_tests.rs  fkey_system_conflict_tests.rs  game_state_tests.rs  health_tests.rs  input_tests.rs  integration_pipeline_test.rs  integration_tests.rs  path_generation_integration_tests.rs  path_generation_tests.rs  path_validation_debug.rs  position_tests.rs  projectile_tests.rs  tower_tests.rs  tower_upgrade_tests.rs
(+15 files in other folders)
