[package]
name = "tower-defense-bevy"
version = "0.1.0"
edition = "2021"

[lib]
name = "tower_defense_bevy"
path = "src/lib.rs"

[[bin]]
name = "tower-defense-bevy"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.16", features = ["default", "bevy_remote"] }
bevy_brp_extras = "0.2"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
